; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_key_is_zero.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_key_is_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key = type { i64* }
%struct.key_type = type { i32 }

@D_CRYPT_ERRORS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"CRYPTO INFO: WARNING: zero key detected\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.key*, %struct.key_type*)* @key_is_zero to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @key_is_zero(%struct.key* %0, %struct.key_type* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.key*, align 8
  %5 = alloca %struct.key_type*, align 8
  %6 = alloca i32, align 4
  store %struct.key* %0, %struct.key** %4, align 8
  store %struct.key_type* %1, %struct.key_type** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %24, %2
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.key_type*, %struct.key_type** %5, align 8
  %10 = getelementptr inbounds %struct.key_type, %struct.key_type* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %27

13:                                               ; preds = %7
  %14 = load %struct.key*, %struct.key** %4, align 8
  %15 = getelementptr inbounds %struct.key, %struct.key* %14, i32 0, i32 0
  %16 = load i64*, i64** %15, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i64, i64* %16, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %30

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %6, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %6, align 4
  br label %7

27:                                               ; preds = %7
  %28 = load i32, i32* @D_CRYPT_ERRORS, align 4
  %29 = call i32 @msg(i32 %28, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %30

30:                                               ; preds = %27, %22
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @msg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
